[package]
name = "kv_server_week1"
version = "0.1.0"
authors = ["16 server lzw <993096281@qq.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_mt"
path = "src/client_multithread.rs"

[dependencies]
protobuf = "~2"
futures = "0.1.16"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
chrono = "0.4"


[build-dependencies]
protoc-grpcio = "1.0.1"